--- a/src/app/pages/new-game/generate-setup/generate-setup.page.html
+++ b/src/app/pages/new-game/generate-setup/generate-setup.page.html
@@ -27,7 +27,7 @@
               <ion-label color="medium"><strong translate>factions-choose</strong></ion-label>
             </ion-item>
             <ion-item *ngFor="let faction of pickedFactionsTwoAlternatives[num - 1]">
-              <ion-icon name="body-outline"></ion-icon>
+              <ion-icon name="body"></ion-icon>
               <ion-label translate>{{faction.name}}</ion-label>
             </ion-item>
           </div>
@@ -42,7 +42,7 @@
       <ion-row>
         <ion-col *ngFor="let faction of pickedFactionsBid">
           <ion-item>
-            <ion-icon name="body-outline"></ion-icon>
+            <ion-icon name="body"></ion-icon>
             <ion-label translate>{{faction.name}}</ion-label>
           </ion-item>
         </ion-col>
@@ -56,7 +56,7 @@
       <ion-row>
         <ion-col *ngFor="let bonusCard of pickedBonusCards">
           <ion-item>
-            <ion-icon name="ribbon-outline"></ion-icon>
+            <ion-icon name="ribbon"></ion-icon>
             <ion-label [innerHtml]="bonusCard.description | translate"></ion-label>
           </ion-item>
         </ion-col>
